[project]
name = "auditicy"
version = "0.0.1a2"
description = "Flexible audit logging for Django, Flask, and FastAPI."
readme = "README.md"
authors = [{ name = "Joan Camps Morey", email = "joan.camps@zeent.com" }]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/zeent/auditicy"
Repository = "https://github.com/zeent/auditicy"
Issues = "https://github.com/zeent/auditicy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
